style tweaks and cleanup

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,9 +12,8 @@
 
 $theme-colors: (
   "primary": #0087d9,
-  "primary-dark": adjust-color(#0074d9, $lightness: -25%),
+  "dark": adjust-color(#0074d9, $lightness: -10%),
   "danger": #ff4136,
-  "light": #fffdfc,
   "darker-light": #f1efef
 );
 
