--- a/app/views/layouts/grading.html.erb
+++ b/app/views/layouts/grading.html.erb
@@ -23,7 +23,7 @@
 
 	<div class="d-flex flex-column h-100" style="max-height:100%">
 
-		<div id="navbar" class="navbar bg-dark navbar-expand-lg flex-shrink-0 py-2 pl-2 pr-3">
+		<div id="navbar" class="navbar navbar-expand-lg flex-shrink-0 py-2 pl-2 pr-3">
 			<%= render 'brand' %>
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
