--- a/app/views/profile/schedule.js.erb
+++ b/app/views/profile/schedule.js.erb
@@ -1,8 +1,8 @@
 document.querySelector("#schedule_name").innerHTML = "<%= current_module && current_module.name || '' %>";
 <% if current_module && current_module.public? %>
-document.querySelector("#schedule_name").classList.remove("text-danger");
+document.querySelector("#schedule_name").classList.remove("unavailable");
 <% else %>
-document.querySelector("#schedule_name").classList.add("text-danger");
+document.querySelector("#schedule_name").classList.add("unavailable");
 <% end %>
 document.querySelector("#schedule").innerHTML = "<%= escape_javascript current_module && links_to_ul(current_module.content) || '' %>";
 document.querySelector("#schedule_prev_button").href = "<%= escape_javascript prev_module.present? ? profile_prev_path : '' %>";
