--- a/app/views/grading/show.html.erb
+++ b/app/views/grading/show.html.erb
@@ -1,5 +1,15 @@
 <% content_for :navbar_items do %>
-		<%= button_to 'Mark as finished', finish_grading_path, class: 'btn btn-secondary m-0 btn-sm', form: { style: 'text-align:center' }, data: { confirm:'Are you sure? All grades that have been fully entered will be marked as "finished". You will not be able to edit those after.' } %>
+	<nav class="nav">
+		<li class="nav-item">
+			<%= link_to '(show all)', { pset: nil }, class: "nav-link #{'active' if params[:pset]==nil}" %>
+		</li>
+		<% @psets_to_grade.each do |pset| %>
+			<li class="nav-item">
+				<%= link_to pset.name, { pset: pset.name }, class: "nav-link #{'active' if params[:pset]==pset.name}" %>
+			</li>
+		<% end %>
+	</nav>
+	<%= button_to 'Mark finished', finish_grading_path, class: 'btn btn-secondary m-0 btn-sm', form_class: 'ml-auto', data: { confirm:'Are you sure? All grades that have been fully entered will be marked as "finished". You will not be able to edit those afterwards.' } %>
 <% end %>
 
 <% cache [ @to_grade, @submit ] do %>
