--- a/app/assets/stylesheets/includes/timeline.scss
+++ b/app/assets/stylesheets/includes/timeline.scss
@@ -23,7 +23,7 @@
 
 #timeline .card
 {
-	background-color:theme-color("darker-light");
+	background-color:$darker-light;
 	border:0;
 	margin-bottom:1rem;
 }
