--- a/app/views/application/_footer.html.erb
+++ b/app/views/application/_footer.html.erb
@@ -1,4 +1,4 @@
 <footer>
 	<%= Course.license %>
-	<a data-toggle="tooltip" data-placement="top" title="<%= Course.acknowledgements %>">Acknowledgements.</a>
+	Acknowledgements: <%= Course.acknowledgements %>
 </footer>
