--- a/app/assets/stylesheets/includes/framework.scss
+++ b/app/assets/stylesheets/includes/framework.scss
@@ -27,15 +27,6 @@ body
 	padding-right:30px;
 }
 
-@media (max-width: 768px)
-{
-	.container
-	{
-		//padding-left:15px;
-		//padding-right:15px;
-	}
-}
-
 .container-fluid
 {
 	margin-right:auto;
@@ -49,11 +40,6 @@ body
 
 //****************************************************************************
 
-#content section, #content header
-{
-//	margin-bottom:1.5em;
-}
-
 #content section:first-child
 {
 	padding-top: 0;
@@ -63,19 +49,13 @@ body
 
 footer
 {
-	padding:1.5em;
-	text-align:center;
-	border-top: 1px solid #eee;
-	font-size:x-small;
-}
-
-footer a
-{
-	color:white;
+	line-height: 2;
+	margin-top: 4rem;
+	font-size: x-small;
 }
 
 footer img
 {
-	vertical-align:-4px;
-	margin-right:1em;
+	vertical-align: -4px;
+	margin-right: 1em;
 }
