--- a/app/assets/stylesheets/includes/navigation.scss
+++ b/app/assets/stylesheets/includes/navigation.scss
@@ -4,10 +4,14 @@
 {
 	padding: 0;
 	width: 100%;
-	font-size: 0.9rem;
 	display:flex;
 	flex-wrap:nowrap;
 	background: linear-gradient(50deg, #FEF3BE 0%, #FDDED0 100%);
+}
+
+#sidebar
+{
+	font-size: 0.9rem;
 }
 
 #sidebar-content
@@ -235,11 +239,10 @@
 
 #sidebar .nav-link
 {
-	padding: 0.5rem 0;
+	padding: 0.5rem 0.25rem;
 	flex: 1 1 auto !important; // fill
 	border-top-right-radius: 0.25rem !important;
 	border-bottom-right-radius: 0.25rem !important;
-	padding-left: 0.25rem !important;
 }
 
 #sidebar-content > ul
@@ -327,6 +330,15 @@
 #icon-nav .nav-item
 {
 	margin-left:.5rem;
+}
+
+#icon-nav .nav-item > a
+{
+	background-color: $light;
+	border-radius: 50rem !important;
+	display: block;
+	padding-bottom: 0.25rem !important;
+	padding-top: 0.25rem !important;
 }
 
 #icon-nav .dropdown-item .fa
