--- a/app/views/users/_hands_overview.html.erb
+++ b/app/views/users/_hands_overview.html.erb
@@ -3,6 +3,7 @@
 	<tr>
 		<td><%= h[1].to_s(:short) %></td>
 		<td><%= h[2].round %> min</td>
+		<td><%= h[3].split.first %></td>
 	</tr>
 	<% end %>
 </table>
