--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -13,7 +13,7 @@
 		<th>Latest</th>
 		<% @psets.each do |pset| %>
 		<th>
-			<%= link_to_if current_user.admin?, pset.name[0..2], publish_schedule_grades_path(schedule_slug: current_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Publish all grades for this assignment?" }, title: pset.name %>
+			<%= link_to_if current_user.admin?, pset.name[0..2], publish_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Publish all grades for this assignment?" }, title: pset.name %>
 		</th>
 		<% end %>
 	</tr>
@@ -23,7 +23,7 @@
 		<td colspan="7"><%= group ? "#{group.name} (#{user_list.size})" : "Groupless" %></td>
 		<% @psets.each do |pset| %>
 		<th>
-			<%= link_to_if current_user.admin?, pset.name[0..2], reopen_schedule_grades_path(schedule_slug: current_schedule.slug, pset_id: pset.id, group_id: group.id), method: :post, data: { confirm: "Re-open all grades for this assignment for this group?" }, title: pset.name, class: 'text-light' %>
+			<%= link_to_if current_user.admin?, pset.name[0..2], reopen_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id, group_id: group.id), method: :post, data: { confirm: "Re-open all grades for this assignment for this group?" }, title: pset.name, class: 'text-light' %>
 		</th>
 		<% end if group %>
 	</tr>
