--- a/app/views/items/_submit.html.erb
+++ b/app/views/items/_submit.html.erb
@@ -4,10 +4,10 @@
 <% if submit.url %>
 URL: <%= link_to submit.url, submit.url %>
 <% end %>
-<% if submit.submitted_files && submit.submitted_files.any? %>
+<% if submit.filenames.any? %>
 <p class="mb-1"><%= t "files_submitted" %></p>
 <ul class="pl-4">
-	<% submit.submitted_files.each do |name| %>
+	<% submit.filenames.each do |name| %>
 	<li><code class="text-body"><%= name %></code></li>
 	<% end %>
 </ul>
