--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -1,5 +1,6 @@
 <% if current_user.admin? %>
 
+<% if current_user.accessible_schedules.any? %>
 <%= menu_group current_schedule.name do %>
 	<%= menu_link 'Overview', overview_path, icon: 'columns' %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen' %>
@@ -7,6 +8,7 @@
 	<%= menu_link 'Announcements...', alerts_path, icon: 'bell-fill', remote: true %>
 	<%= menu_link 'Tests...', tests_path, icon: 'check', remote: true, condition: Settings.tests_present %>
 	<%= menu_link 'Set module...', edit_schedule_current_module_path(current_schedule), icon: 'calendar', remote: true, condition: current_schedule.can_admin_set_module? %>
+<% end %>
 <% end %>
 
 <% if current_user.accessible_schedules.many? %>
@@ -30,10 +32,12 @@
 	<%= menu_link 'Hands', hands_path, icon: 'people-fill', condition: Settings.hands_allow %>
 <% end if Settings.hands_allow %>
 	
+<% if current_user.accessible_schedules.any? %>
 <%= menu_group current_schedule.name do %>
 	<%= menu_link 'Overview', overview_path, icon: 'columns' %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen' %>
 	<%= menu_link 'Tests...', tests_path, icon: 'check', remote: true, condition: Settings.tests_present %>
+<% end %>
 <% end %>
 
 <% if current_user.accessible_schedules.many? %>
