fallback when there's no schedule

--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -117,7 +117,7 @@
 	<% if logged_in? && current_user.submits.any? %>
 		<div style="flex:1 0 0; min-width:0"><a href="/submissions" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'kanban' %><br><small><%= t(:submissions) %></small></a></div>
 	<% end %>
-	<% if current_schedule.page %>
+	<% if current_schedule && current_schedule.page %>
 		<div style="flex:1 0 0; min-width:0"><a href="/syllabus" class="d-block w-100 text-center text-truncate p-1 rounded"><%= bootstrap_icon 'calendar' %><br><small><%= t(:syllabus) %></small></a></div>
 	<% end %>
 	<% Course.links.each do |title, url|  %>
