--- a/app/views/admin/users/_set_group_permissions.js.erb
+++ b/app/views/admin/users/_set_group_permissions.js.erb
@@ -1,1 +1,1 @@
-$('#group_permissions_<%= @user.id %>').html('<%= j render('group_permissions', { groups: @user.groups, user: @user }) %>');
+document.getElementById('group_permissions_<%= @user.id %>').innerHTML = '<%= j render('group_permissions', { groups: @user.groups, user: @user }) %>';
