--- a/app/views/admin/users/_set_schedule_permissions.js.erb
+++ b/app/views/admin/users/_set_schedule_permissions.js.erb
@@ -1,1 +1,1 @@
-$('#schedule_permissions_<%= @user.id %>').html('<%= j render('schedule_permissions', { schedules: @user.schedules, user: @user }) %>');
+document.getElementById('schedule_permissions_<%= @user.id %>').innerHTML = '<%= j render('schedule_permissions', { schedules: @user.schedules, user: @user }) %>';
