--- a/app/views/hands/raises/form.js.erb
+++ b/app/views/hands/raises/form.js.erb
@@ -1,2 +1,2 @@
-$('#ama').html("<%= j(render 'form') %>");
-$('[data-toggle="tooltip"]').tooltip()
+document.getElementById('ama').innerHTML = "<%= j(render 'form') %>";
+enableTooltips();
