--- a/app/views/layouts/page.html.erb
+++ b/app/views/layouts/page.html.erb
@@ -15,7 +15,7 @@
 <% content_for :footer do %>
 	<% if Settings.pages_enable_math %>
 	<script>
-		$(document).on('turbolinks:load', function() {
+		document.addEventListener('turbolinks:load', function() {
 			if(MathJax.typeset)
 				MathJax.typeset();
 		});
