--- a/app/views/page/_submit_tab.html.erb
+++ b/app/views/page/_submit_tab.html.erb
@@ -3,7 +3,7 @@
 <% end %>
 
 <% if @page.pset.form || @page.pset.files %>
-<table class="table table-bordered">
+<table class="table table-bosrdered">
 
 	<% if @page.pset.form %>
 	<tr>
