--- a/app/views/admin/site/_dropbox.html.erb
+++ b/app/views/admin/site/_dropbox.html.erb
@@ -4,7 +4,7 @@
 	<% if @dropbox_linked %>
 	Dropbox is connected.
 	<% else %>
-	<%= link_to 'Link to your account', admin_dropbox_connect_path, remote: false, method: :post, class:'btn btn-secondary' %>
+	<%= link_to 'Link to your account', admin_dropbox_connect_path, remote: false, method: :post, class:'btn btn-primary' %>
 	<% end %>
 </p>
 
