--- a/app/views/admin/users/set_permissions.js.erb
+++ b/app/views/admin/users/set_permissions.js.erb
@@ -1,1 +1,1 @@
-$('#<%= kind %>_permissions').html('<%= j render('set_permissions', { set_permissions: list, user: user }) %>');
+document.getElementById('<%= kind %>_permissions').innerHTML = '<%= j render('set_permissions', { set_permissions: list, user: user }) %>';
