--- a/app/views/alerts/edit.js.erb
+++ b/app/views/alerts/edit.js.erb
@@ -1,3 +1,3 @@
-$('#modal-browser').modal('show');
-$('#modal-browser-title').html("Edit announcement");
-$('#modal-browser-body').html("<%= j(render partial: 'form') %>");
+modalBrowser.show();
+document.getElementById('modal-browser-title').innerHTML = "Edit announcement";
+document.getElementById('modal-browser-body').innerHTML = "<%= j(render partial: 'form') %>";
