--- a/app/views/alerts/index.js.erb
+++ b/app/views/alerts/index.js.erb
@@ -1,3 +1,3 @@
-$('#modal-browser').modal('show');
-$('#modal-browser-header').html("<%= j render 'modal_title', header: 'Announcements' %>");
-$('#modal-browser-body').html("<%= j(render partial: 'index') %>");
+modalBrowser.show();
+document.getElementById('modal-browser-header').innerHTML = "<%= j render 'modal_title', header: 'Announcements' %>";
+document.getElementById('modal-browser-body').innerHTML = "<%= j(render partial: 'index') %>";
