--- a/app/views/alerts/show.js.erb
+++ b/app/views/alerts/show.js.erb
@@ -1,3 +1,3 @@
-$('#modal-browser').modal('show');
-$('#modal-browser-title').html("Announcement");
-$('#modal-browser-body').html("<%= j(render partial: 'show') %>");
+modalBrowser.show();
+document.getElementById('modal-browser-title').innerHTML = "Announcement";
+document.getElementById('modal-browser-body').innerHTML = "<%= j(render partial: 'show') %>";
