--- a/app/views/application/_modal_title.html.erb
+++ b/app/views/application/_modal_title.html.erb
@@ -1,4 +1,2 @@
 <h5 id="modal-browser-title" class="modal-title"><%= header %></h5>
-<button type="button" class="close" data-dismiss="modal" aria-label="Close">
-	<span aria-hidden="true">&times;</span>
-</button>
+<button type="button" class="btn-close" data-dismiss="modal" aria-label="Close"></button>
