--- a/app/views/application/load_modal.js.erb
+++ b/app/views/application/load_modal.js.erb
@@ -1,4 +1,4 @@
-$('#modal-browser').modal('show');
+modalBrowser.show();
 <% if @header %>
 document.getElementById('modal-browser-header').innerHTML = "<%= j render 'modal_title', header: @header %>";
 <% elsif @header_partial %>
@@ -6,9 +6,6 @@ document.getElementById('modal-browser-header').innerHTML = "<%= j(render @heade
 <% end %>
 document.getElementById('modal-browser-body').innerHTML = "<%= j(render @partial) %>";
 <% if @tooltips %>
-$('[data-toggle="tooltip"]').tooltip();
-<% end %>
-<% if @in_place_editing %>
-$(".best_in_place").best_in_place();
+enableTooltips();
 <% end %>
 <%= @js %>
