--- a/app/views/check/index.html.erb
+++ b/app/views/check/index.html.erb
@@ -11,8 +11,8 @@
 		<tr id="td<%= user.login_id %>">
 			<td><%= user.name %></td>
 			<td>
-				<%= link_to 'pass', grade_save_path(grade:{ grade:-1 }, pset_id:@pset.id, user_id:user.id), method: :post, remote: true, onclick:"$('#td#{user.login_id}').fadeOut()" %> ---
-				<%= link_to 'fail', grade_save_path(grade:{ grade:0 }, pset_id:@pset.id, user_id:user.id), method: :post, remote: true, onclick:"$('#td#{user.login_id}').fadeOut()" %>
+				<%= link_to 'pass', grade_save_path(grade:{ grade:-1 }, pset_id:@pset.id, user_id:user.id), method: :post, remote: true, onclick:"document.getElementById('td#{user.login_id}').fadeOut()" %> ---
+				<%= link_to 'fail', grade_save_path(grade:{ grade:0 }, pset_id:@pset.id, user_id:user.id), method: :post, remote: true, onclick:"document.getElementById('td#{user.login_id}').fadeOut()" %>
 			</td>
 		</tr>
 		<% end %>
