--- a/app/views/home/_psets_to_publish.html.erb
+++ b/app/views/home/_psets_to_publish.html.erb
@@ -6,9 +6,9 @@
 	<% @psets.each do |pset, count| %>
 	<li class="list-group-item d-flex align-items-center">
 		<%= pset[1] %>
-		<span class="badge badge-primary ml-auto"><%= link_to "#{count} done", submits_path(pset: pset[0], status: Grade.statuses[:finished]), class: 'text-light' %></span>
+		<span class="badge bg-primary ml-auto"><%= link_to "#{count} done", submits_path(pset: pset[0], status: Grade.statuses[:finished]), class: 'text-light' %></span>
 		<% if current_user.admin? %>
-		<span class="badge badge-primary ml-1">
+		<span class="badge bg-primary ml-1">
 			<%= link_to "publish", publish_schedule_grades_path(current_schedule, pset: pset[1]), remote: true, method: :post, data: { confirm: "Sure?" }, class: "text-light" %>
 		</span>
 		<% end %>
