--- a/app/views/items/_grade.html.erb
+++ b/app/views/items/_grade.html.erb
@@ -8,12 +8,12 @@
 		<% Settings.grading['grades'][grade.pset.name]['subgrades'].each_pair do |subgrade_name, unin| %>
 		<% k=subgrade_name %>
 		<% v=grade.subgrades[k] %>
-		<span class="btn btn-sm btn-outline-secondary"><%= k.capitalize %> <span class="badge badge-secondary"><%= translate_subgrade(v) %></span></span>
+		<span class="btn btn-sm btn-outline-secondary"><%= k.capitalize %> <span class="badge bg-secondary"><%= translate_subgrade(v) %></span></span>
 		<% end %>
 	<% end %>
 
 	<% if !Settings.grading || !Settings.grading['grades'][grade.pset.name] || !Settings.grading['grades'][grade.pset.name]['hide_calculated'] %>
-	<span class="btn btn-sm btn-outline-primary"> Grade <span class="badge badge-primary"><%= translate_grade(grade.any_final_grade) %></span></span>
+	<span class="btn btn-sm btn-outline-primary"> Grade <span class="badge bg-primary"><%= translate_grade(grade.any_final_grade) %></span></span>
 	<% end%>
 
 </p>
