--- a/app/views/layouts/boxes.html.erb
+++ b/app/views/layouts/boxes.html.erb
@@ -56,25 +56,8 @@
 	<%= render partial: "modal_browser" %>
 </body>
 
-<% if !current_user.valid_profile? %>
-	<script type="text/javascript">
-	$(function () {
-		$('#user-menu').dropdown('toggle');
-		// $('#user-menu').dropdown('update');
-		return false;
-	});
-	
-	$('.profile-form').click(function(e) {
-	    e.stopPropagation();
-	});
-	
-	</script>
-<% end %>
-
 <script type="text/javascript">
-$(function () {
-	$('[data-toggle="tooltip"]').tooltip()
-});
+	enableTooltips();
 </script>
 
 </html>
