--- a/app/views/layouts/hands.html.erb
+++ b/app/views/layouts/hands.html.erb
@@ -28,11 +28,9 @@
 				<div class="col-12">
 					<%= form_tag(hands_path, method: 'get', class: 'form mt-3') do %>
 					<div class="input-group">
-						<div class="input-group-prepend">
+						<div class="input-group">
 							<a class="btn btn-secondary" href="<%= hands_path %>"><%= bootstrap_icon 'chevron-left' %></a>
-						</div>
-						<input type="text" class="form-control" placeholder="Search" name="term" id="term" required>
-						<div class="input-group-append">
+							<input type="text" class="form-control" placeholder="Search" name="term" id="term" required>
 							<button class="btn btn-primary" type="submit"><%= bootstrap_icon 'search' %></button>
 						</div>
 					</div>
