--- a/app/views/schedules/current_modules/edit.js.erb
+++ b/app/views/schedules/current_modules/edit.js.erb
@@ -1,3 +1,3 @@
-$('#modal-browser').modal('show');
-$('#modal-browser-header').html("<%= j render 'modal_title', header: "Set current module for #{current_user.schedule.name}" %>");
-$('#modal-browser-body').html("<%= j(render partial: 'edit') %>");
+modalBrowser.show();
+document.getElementById('modal-browser-header').innerHTML = "<%= j render 'modal_title', header: "Set current module for #{current_user.schedule.name}" %>";
+document.getElementById('modal-browser-body').innerHTML = "<%= j(render partial: 'edit') %>";
