refactor student search autocomplete

--- a/app/views/hands/hands/show.html.erb
+++ b/app/views/hands/hands/show.html.erb
@@ -16,9 +16,9 @@
 
 <p><%= button_to("I'll take the question", dib_hand_path(@hand), method: :put, class: 'btn btn-primary btn-block') %></p>
 			
-<p><%= button_to('Student has left, remove question', done_hand_path(@hand, success: false), method: :put, class: 'btn btn-default btn-block', data: { confirm: 'Sure to delete?' })%></p>
+<p><%= button_to('Student has left, remove question', done_hand_path(@hand, success: false), method: :put, class: 'btn btn-block', data: { confirm: 'Sure to delete?' })%></p>
 
-<p><%= button_to("Back to list", hands_path, method: :get, class: 'btn btn-default btn-block' ) %></p>
+<p><%= button_to("Back to list", hands_path, method: :get, class: 'btn btn-block' ) %></p>
 
 <% else %>
 
