--- a/app/views/profile/index.html.erb
+++ b/app/views/profile/index.html.erb
@@ -36,7 +36,7 @@
 			
 		</div>
 		<div class="modal-footer">
-			<%= link_to 'Cancel', session_logout_path, class: 'btn btn-default' %>
+			<%= link_to 'Cancel', session_logout_path, class: 'btn' %>
 			<%= submit_tag 'Create Profile', class:'btn btn-primary' %>
 		</div>
 	</div>
