--- a/app/views/schedules/submits/form_for_late.html.erb
+++ b/app/views/schedules/submits/form_for_late.html.erb
@@ -14,6 +14,6 @@
 	<label for="exampleInputEmail1">Send this message:</label>
 	<textarea name="text" class="form-control">Let op: je hebt niets ingestuurd voor deze opdracht! Neem zo snel mogelijk contact op met je docent.</textarea>
 </div>
-<input type="submit" class="btn btn-default">
+<input type="submit" class="btn btn-primary">
 
 <% end %>
