--- a/app/views/application/_search.html.erb
+++ b/app/views/application/_search.html.erb
@@ -1,33 +1,6 @@
-<div id="search" class="dropdown form-inline">
-	<input id="student-search" type="text" autocomplete="off" class="form-control form-control-sm w-100s" placeholder="Find student" aria-label="Find student">
-	<div id="search-results" class="dropdown-menu dropdown-menu-right" role="menu"></div>
+<div id="search" class="dropdown autocomplete">
+	<form id="student-search-form" action="<%= search_users_path %>" method="get" data-remote="true">
+		<input id="student-search" name="text" type="text" autocomplete="off" class="form-control form-control-sm" placeholder="Find student" aria-label="Find student">
+	</form>
+	<div id="search-results" class="dropdown-menu dropdown-menu-right autocomplete-results" role="menu"></div>
 </div>
-<script>
-	document.getElementById('student-search').addEventListener('focus', (e) => {
-		if(document.getElementById('search-results').childElementCount > 0)
-			document.getElementById('search-results').style.display = 'block';
-	});
-	x=function(e) {
-		Rails.ajax({
-			url: '<%= search_users_path %>',
-			type: 'get',
-			data: { text: document.getElementById('student-search').value }
-		});
-		true;
-	}
-	document.getElementById('student-search').addEventListener('paste', x);
-	document.getElementById('student-search').addEventListener('input', x);
-	document.getElementById('student-search').addEventListener('keydown', (kbd) => {
-		if(kbd.which == 40 || kbd.which == 38) {
-			document.getElementById('search-results').children[0].focus();
-		}
-	});
-	document.getElementById('search-results').addEventListener('keydown', (kbd) => {
-		if(kbd.which == 40 && kbd.target != null) {
-			document.getElementById(kbd.target).nextSibling.focus();
-		}
-		if(kbd.which == 38 && kbd.target != null) {
-			document.getElementById(kbd.target).previousSibling.focus();
-		}
-	});
-</script>
