--- a/app/views/application/_modal_browser.html.erb
+++ b/app/views/application/_modal_browser.html.erb
@@ -1,5 +1,5 @@
 <div id="modal-browser" class="modal" tabindex="-1" role="dialog">
-	<div class="modal-dialog modal-dialog-scrollable modal-lg" role="document">
+	<div class="modal-dialog modal-dialog-scrollable modal-lg modal-fullscreen-sm-down" role="document">
 		<div class="modal-content">
 			<div id="modal-browser-header" class="modal-header align-items-start">
 				<h5 id="modal-browser-title" class="modal-title"></h5>
