--- a/app/views/application/_brand.html.erb
+++ b/app/views/application/_brand.html.erb
@@ -1,5 +1,5 @@
 <%# min-width:0 is to allow the div to dictate the width for flexboxed children %>
-<a href="/" class="navbar-brand d-flex align-items-center mr-auto" style="min-width:0;">
+<a href="/" class="navbar-brand d-flex align-items-center mr-auto fw-bold" style="min-width:0;">
 	
 	<%= bootstrap_icon "terminal", class: "pull-left rounded mr-2 flex-shrink-0 p-1 d-none d-md-block", width:32, height:32, style: 'vertical-align:bottom;' %>
 
@@ -7,7 +7,7 @@
 		<span><%= Course.long_name %></span>
 
 		<% if logged_in? %>
-		<small>
+		<small class="fw-normal fs-6>
 			<%= current_user && current_user.name || session[:cas_user] %>
 			<%= '&middot;'.html_safe if current_user && user_designation %>
 			<%= user_designation %>
